--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.uppp</groupId>
-    <artifactId>java-sample</artifactId>
+    <artifactId>java-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
