--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
 
     <properties>
         <spring.version>5.1.5.RELEASE</spring.version>
+<!--        <maven.compiler.source>1.8</maven.compiler.source>-->
+<!--        <maven.compiler.target>1.8</maven.compiler.target>-->
     </properties>
 
     <dependencies>
@@ -91,6 +93,11 @@
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+            <version>3.2.8.RELEASE</version>
         </dependency>
     </dependencies>
 </project>
